Add parsing-code generator.
- Now code generators for primitive types are complete.
-- May need checking-code generator for the primitive types.

--- a/apps/2d/mhd/rotated_shock_tube/GenerateParamsClass.ipynb
+++ b/apps/2d/mhd/rotated_shock_tube/GenerateParamsClass.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:37029e6253af3cfb89924c435681708ef772fae082d1a30515514ec6f93e017e"
+  "signature": "sha256:f72921a5a24c744a41fa9c7d52304ff0871478d83e206c83f53d8b32462229a4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -162,6 +162,23 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "def terminate_on_missing(variable_name, section, name):\n",
+      "    return \"\"\"\n",
+      "        if(%(variable_name)s_str = \"\")\n",
+      "            terminate(\"%(section)s.%(name)s is missing.\");\n",
+      "    \"\"\" % \\\n",
+      "    {\"variable_name\" : variable_name,\n",
+      "     \"section\": section, \n",
+      "     \"name\": name}"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "class ParameterType:\n",
       "    def __init__(self, type_string):\n",
       "        if type(type_string) != str:\n",
@@ -180,7 +197,29 @@
       "         \"variable_name\": variable_name}\n",
       "        \n",
       "        return declaration\n",
-      "    "
+      "    \n",
+      "    def generate_stringTo_code(self, variable_name):\n",
+      "        return \"\"\"\n",
+      "        this->%(variable_name)s = stringToAny<%(type_string)s>(%(variable_name)s_str);\n",
+      "        \"\"\" % \\\n",
+      "        {\"variable_name\": variable_name,\n",
+      "         \"type_string\": self.type_string\n",
+      "         }\n",
+      "    \n",
+      "    def generate_parsing(self, variable_name, section, name, \n",
+      "                         missing_handler = terminate_on_missing):\n",
+      "        parsing = \"\"\"\n",
+      "        string %(variable_name)s_str = ini_doc[\"%(section)s\"][\"%(name)s\"];\n",
+      "        %(missing_handling)s\n",
+      "        %(stringTo_code)s\n",
+      "        \"\"\" % \\\n",
+      "        {\"variable_name\": variable_name,\n",
+      "         \"section\": section,\n",
+      "         \"name\": name,\n",
+      "         \"missing_handling\": missing_handler(variable_name, section, name),\n",
+      "         \"stringTo_code\": self.generate_stringTo_code(variable_name)}\n",
+      "        return parsing\n",
+      "    \n"
      ],
      "language": "python",
      "metadata": {},
@@ -201,19 +240,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "p = ParameterType(123)\n",
-      "#expect a ValueError"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "p = ParameterType(\"ss\")\n",
-      "#expect a ValueError"
+      "print p.generate_parsing(\"meqn\", \"dogParams\", \"meqnnn\")"
      ],
      "language": "python",
      "metadata": {},
@@ -243,7 +270,9 @@
       "    \n",
       "    def get_declaration_code(self):\n",
       "        return self.type_.generate_declaration(self.variable_name)\n",
-      "        \n",
+      "    \n",
+      "    def get_parsing_code(self):\n",
+      "        return self.type_.generate_parsing(self.variable_name, self.section, self.name)\n",
       "        \n",
       "        "
      ],
@@ -255,7 +284,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "p = Parameter(\"meqn\", \"\", \"\", \"int\")"
+      "p = Parameter(\"meqn\", \"dogParams\", \"meqn\", \"int\")"
      ],
      "language": "python",
      "metadata": {},
@@ -266,6 +295,16 @@
      "collapsed": false,
      "input": [
       "print p.get_declaration_code()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print p.get_parsing_code()"
      ],
      "language": "python",
      "metadata": {},
@@ -329,6 +368,8 @@
       "- Add declaration generator for enum type\n",
       " - Derive from ParameterType class\n",
       " - Add parsing code generator for all existent parameter types\n",
+      " -- DONE parsing code generator for primitive types\n",
+      " -- TODO parsing code generator for enum types\n",
       " - Add additional checking code generator\n",
       " - Add derived parameter code generator"
      ]
