Add check for invalid enum.

--- a/apps/2d/mhd/rotated_shock_tube/GenerateParamsClass.ipynb
+++ b/apps/2d/mhd/rotated_shock_tube/GenerateParamsClass.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f72921a5a24c744a41fa9c7d52304ff0871478d83e206c83f53d8b32462229a4"
+  "signature": "sha256:4a64d6a49446488adafe804edd0d73785b6d11b69c05a43aebc233c32b3a7fbf"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -164,8 +164,8 @@
      "input": [
       "def terminate_on_missing(variable_name, section, name):\n",
       "    return \"\"\"\n",
-      "        if(%(variable_name)s_str = \"\")\n",
-      "            terminate(\"%(section)s.%(name)s is missing.\");\n",
+      "    if(%(variable_name)s_str == \"\")\n",
+      "        terminate(\"%(section)s.%(name)s is missing.\");\n",
       "    \"\"\" % \\\n",
       "    {\"variable_name\" : variable_name,\n",
       "     \"section\": section, \n",
@@ -200,7 +200,7 @@
       "    \n",
       "    def generate_stringTo_code(self, variable_name):\n",
       "        return \"\"\"\n",
-      "        this->%(variable_name)s = stringToAny<%(type_string)s>(%(variable_name)s_str);\n",
+      "    this->%(variable_name)s = stringToAny<%(type_string)s>(%(variable_name)s_str);\n",
       "        \"\"\" % \\\n",
       "        {\"variable_name\": variable_name,\n",
       "         \"type_string\": self.type_string\n",
@@ -209,10 +209,10 @@
       "    def generate_parsing(self, variable_name, section, name, \n",
       "                         missing_handler = terminate_on_missing):\n",
       "        parsing = \"\"\"\n",
-      "        string %(variable_name)s_str = ini_doc[\"%(section)s\"][\"%(name)s\"];\n",
-      "        %(missing_handling)s\n",
-      "        %(stringTo_code)s\n",
-      "        \"\"\" % \\\n",
+      "    string %(variable_name)s_str = ini_doc[\"%(section)s\"][\"%(name)s\"];\n",
+      "    %(missing_handling)s\n",
+      "    %(stringTo_code)s\n",
+      "    \"\"\" % \\\n",
       "        {\"variable_name\": variable_name,\n",
       "         \"section\": section,\n",
       "         \"name\": name,\n",
@@ -220,6 +220,100 @@
       "         \"stringTo_code\": self.generate_stringTo_code(variable_name)}\n",
       "        return parsing\n",
       "    \n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "class EnumParameterType(ParameterType):\n",
+      "    def __init__(self, enum_scope_name, string_enumerator_dict):\n",
+      "        if type(enum_scope_name) != str:\n",
+      "            raise ValueError(\"enum_scope_name should be a string.\")\n",
+      "        if type(string_enumerator_dict) != dict:\n",
+      "            raise ValueError(\"string_enumerator_dict should be a dict.\")\n",
+      "        \n",
+      "        self.enum_scope_name = enum_scope_name\n",
+      "        self.full_enum_scope_name = class_name + \"::\" + enum_scope_name\n",
+      "        self.string_enumerator_dict = string_enumerator_dict\n",
+      "        self.type_string = \"\"\"%(class_name)s::%(enum_scope_name)s::enum_type\"\"\" % \\\n",
+      "                           {\"class_name\": class_name,\n",
+      "                            \"enum_scope_name\": enum_scope_name}\n",
+      "        \n",
+      "    def generate_type_definition(self):\n",
+      "        return \"\"\"public:\n",
+      "        struct %(enum_scope_name)s{\n",
+      "            enum enum_type {%(enumerator_list)s, DEFAULT};\n",
+      "        };\n",
+      "        \"\"\" % \\\n",
+      "        {\"enum_scope_name\": self.enum_scope_name,\n",
+      "         \"enumerator_list\": \", \".join(self.string_enumerator_dict.values())}\n",
+      "    \n",
+      "    def generate_stringToAny_specialization(self):\n",
+      "        return \"\"\"template<>\n",
+      "inline %(type_string)s stringToAny<%(type_string)s>(const std::string& s){\n",
+      "    return\n",
+      "%(case_code)s\n",
+      "        \n",
+      "}\n",
+      "        \"\"\" % \\\n",
+      "        {\"type_string\": self.type_string,\n",
+      "         \"full_enum_scope_name\": self.full_enum_scope_name,\n",
+      "         \"case_code\":\n",
+      "             \"\\n\".join([\"\"\"        s == \"%(string)s\" ? %(full_enum_scope_name)s::%(enumerator)s :\"\"\" % \\\n",
+      "                        {\"string\": item[0],\n",
+      "                         \"enumerator\": item[1],\n",
+      "                         \"full_enum_scope_name\": self.full_enum_scope_name} \\\n",
+      "                        for item in self.string_enumerator_dict.items()]    + \n",
+      "                       [\"        \" + self.full_enum_scope_name + \"::DEFAULT;\"])\n",
+      "         }\n",
+      "    \n",
+      "    def generate_parsing(self, variable_name, section, name, \n",
+      "                     missing_handler = terminate_on_missing):\n",
+      "        return ParameterType.generate_parsing(self, variable_name, section, name, missing_handler) + \\\n",
+      "               \"\"\"\n",
+      "    if(this->%(variable_name)s == %(full_enum_scope_name)s::DEFAULT)\n",
+      "        terminate(\"%(section)s.%(name)s should be one of the following: %(string_list)s.\");\n",
+      "               \"\"\" % \\\n",
+      "               {\"variable_name\": variable_name,\n",
+      "                \"full_enum_scope_name\": self.full_enum_scope_name,\n",
+      "                \"section\": section,\n",
+      "                \"name\": name,\n",
+      "                \"string_list\": \", \".join(self.string_enumerator_dict.keys())}\n",
+      "        "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "p = EnumParameterType(\"ReconstructionMethod\", {\"A\":\"A\", \"B\":\"B\", \"C\":\"C\"})"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print p.generate_type_definition()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print p.generate_stringToAny_specialization()"
      ],
      "language": "python",
      "metadata": {},
@@ -321,7 +415,7 @@
       "        self.parameter = parameter\n",
       "        \n",
       "        assert access_by_name == None or type(access_by_name) == str\n",
-      "        self.access_by_name = parameter.name if access_by_name == None else access_by_name\n",
+      "        self.access_by_name = parameter.variable_name if access_by_name == None else access_by_name\n",
       "        \n",
       "    def get_accessor_code(self):\n",
       "        accessor = \"\"\"public:\n",
@@ -361,45 +455,158 @@
      "outputs": []
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = Accessor(Parameter(\"reconstruction_method\", \"reconstruction\", \"method\",\n",
+      "                       EnumParameterType(\"ReconstructionMethod\", {\"A\":\"A\", \"B\":\"B\", \"C\":\"C\"})))"
+     ],
+     "language": "python",
      "metadata": {},
-     "source": [
-      "#TODO\n",
-      "- Add declaration generator for enum type\n",
-      " - Derive from ParameterType class\n",
-      " - Add parsing code generator for all existent parameter types\n",
-      " -- DONE parsing code generator for primitive types\n",
-      " -- TODO parsing code generator for enum types\n",
-      " - Add additional checking code generator\n",
-      " - Add derived parameter code generator"
-     ]
+     "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "class_declaration_contents = \"\"\"\n",
-      "public:\n",
-      "    struct ReconstructionMethod{\n",
-      "        enum enum_type {A, B, C, DEFAULT};\n",
-      "    };\n",
-      "private:    \n",
-      "    ReconstructionMethod::enum_type reconstruction_method;\n",
-      "public:\n",
-      "    inline ReconstructionMethod::enum_type get_reconstruction_method(){\n",
-      "        return this->reconstruction_method;\n",
-      "    }\n",
-      "private:\n",
-      "    int meqn;\n",
-      "public:\n",
-      "    inline int get_meqn(){\n",
-      "        return this->meqn;\n",
-      "    }\n",
-      "\"\"\""
+      "print a.get_accessor_code()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "parameters = [Parameter(variable_name = \"reconstruction_method\",\n",
+      "                        section = \"reconstruction\",\n",
+      "                        name = \"method\",\n",
+      "                        type_ = EnumParameterType(enum_scope_name = \"ReconstructionMethod\",\n",
+      "                                                  string_enumerator_dict = \\\n",
+      "                                                      {\"A\": \"A\", \"B\":\"B\", \"C\":\"C\"})),\n",
+      "              Parameter(variable_name = \"meqn\",\n",
+      "                        section = \"dogParams\",\n",
+      "                        name = \"meqn\",\n",
+      "                        type_ = \"int\")]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "accessors = map(Accessor, parameters)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "types_requiring_definitions = \\\n",
+      "    [t for t in set([p.type_ for p in parameters])\n",
+      "         if getattr(t, \"generate_type_definition\", None) != None]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "class_declaration_contents = \\\n",
+      "    \"\\n\".join([t.generate_type_definition() for t in types_requiring_definitions]) + \\\n",
+      "    \"\\n\" + \\\n",
+      "    \"\\n\".join([p.get_declaration_code() for p in parameters]) + \\\n",
+      "    \"\\n\" + \\\n",
+      "    \"\\n\".join([a.get_accessor_code() for a in accessors])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print class_declaration_contents"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "types_requiring_stringToAny_specialization = \\\n",
+      "    [t for t in set([p.type_ for p in parameters])\n",
+      "         if getattr(t, \"generate_stringToAny_specialization\", None) != None]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print types_requiring_stringToAny_specialization"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "stringToAny_specializations_code = \\\n",
+      "    \"\\n\".join([t.generate_stringToAny_specialization() for t in types_requiring_stringToAny_specialization])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print stringToAny_specializations_code"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    class_declaration_contents = \"\"\"\n",
+      "    public:\n",
+      "        struct ReconstructionMethod{\n",
+      "            enum enum_type {A, B, C, DEFAULT};\n",
+      "        };\n",
+      "    private:    \n",
+      "        ReconstructionMethod::enum_type reconstruction_method;\n",
+      "    public:\n",
+      "        inline ReconstructionMethod::enum_type get_reconstruction_method(){\n",
+      "            return this->reconstruction_method;\n",
+      "        }\n",
+      "    private:\n",
+      "        int meqn;\n",
+      "    public:\n",
+      "        inline int get_meqn(){\n",
+      "            return this->meqn;\n",
+      "        }\n",
+      "    \"\"\""
+     ]
     },
     {
      "cell_type": "code",
@@ -411,7 +618,7 @@
       "    Params(){}\n",
       "    void init(const std::string& inputFilename);\n",
       "\n",
-      "%(class_declaration_contents)s    \n",
+      "%(class_declaration_contents)s\n",
       "};\n",
       "\"\"\" % \\\n",
       "{\"class_declaration_contents\": class_declaration_contents}"
@@ -486,37 +693,54 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "cpp_init_method_contents = \"\"\"\n",
-      "    string reconstruction_method_str = ini_doc[\"reconstruction\"][\"method\"];\n",
-      "    if(reconstruction_method_str == \"\")\n",
-      "    terminate(\"reconstruction.method is missing.\");\n",
-      "\n",
-      "    {\n",
-      "        this->reconstruction_method =\n",
-      "        reconstruction_method_str == \"A\" ? Params::ReconstructionMethod::A :\n",
-      "        reconstruction_method_str == \"B\" ? Params::ReconstructionMethod::B :\n",
-      "        reconstruction_method_str == \"C\" ? Params::ReconstructionMethod::C :\n",
-      "        Params::ReconstructionMethod::DEFAULT;\n",
-      "    }\n",
-      "\n",
-      "    if(this->reconstruction_method == Params::ReconstructionMethod::DEFAULT)\n",
-      "        terminate(\"reconstruction.method must be one of the following: A, B, C.\");\n",
-      "    \n",
-      "    string meqn_str = ini_doc[\"dogParams\"][\"meqn\"];\n",
-      "    if(meqn_str == \"\")\n",
-      "        terminate(\"dogParams.meqn is missing.\");\n",
-      "\n",
-      "    {\n",
-      "        this->meqn = stringToAny<int>(meqn_str);\n",
-      "    }\n",
-      "\n",
-      "    if(this->meqn <= 0)\n",
-      "        terminate(\"dogParams.meqn is expected to be positive.\");\n",
-      "\"\"\""
+      "cpp_init_method_contents = \"\\n\".join([p.get_parsing_code() for p in parameters])"
      ],
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print cpp_init_method_contents"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    cpp_init_method_contents = \"\"\"\n",
+      "        string reconstruction_method_str = ini_doc[\"reconstruction\"][\"method\"];\n",
+      "        if(reconstruction_method_str == \"\")\n",
+      "        terminate(\"reconstruction.method is missing.\");\n",
+      "\n",
+      "        {\n",
+      "            this->reconstruction_method =\n",
+      "            reconstruction_method_str == \"A\" ? Params::ReconstructionMethod::A :\n",
+      "            reconstruction_method_str == \"B\" ? Params::ReconstructionMethod::B :\n",
+      "            reconstruction_method_str == \"C\" ? Params::ReconstructionMethod::C :\n",
+      "            Params::ReconstructionMethod::DEFAULT;\n",
+      "        }\n",
+      "\n",
+      "        if(this->reconstruction_method == Params::ReconstructionMethod::DEFAULT)\n",
+      "            terminate(\"reconstruction.method must be one of the following: A, B, C.\");\n",
+      "\n",
+      "        string meqn_str = ini_doc[\"dogParams\"][\"meqn\"];\n",
+      "        if(meqn_str == \"\")\n",
+      "            terminate(\"dogParams.meqn is missing.\");\n",
+      "\n",
+      "        {\n",
+      "            this->meqn = stringToAny<int>(meqn_str);\n",
+      "        }\n",
+      "\n",
+      "        if(this->meqn <= 0)\n",
+      "            terminate(\"dogParams.meqn is expected to be positive.\");\n",
+      "    \"\"\""
+     ]
     },
     {
      "cell_type": "code",
@@ -553,7 +777,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "header_result = header_head + class_declaration + header_tail"
+      "header_result = header_head + class_declaration + stringToAny_specializations_code + header_tail"
      ],
      "language": "python",
      "metadata": {},
@@ -598,14 +822,6 @@
       "with open(cpp_filename, 'w') as f:\n",
       "    f.write(cpp_result)"
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
