--- a/apps/2d/mhd/rotated_shock_tube/GenerateParamsClass.ipynb
+++ b/apps/2d/mhd/rotated_shock_tube/GenerateParamsClass.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4a64d6a49446488adafe804edd0d73785b6d11b69c05a43aebc233c32b3a7fbf"
+  "signature": "sha256:d6c828c8e4299e8b513dbbfb23fd5f29654380653d3604463a5645f540da60fc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -488,7 +488,11 @@
       "              Parameter(variable_name = \"meqn\",\n",
       "                        section = \"dogParams\",\n",
       "                        name = \"meqn\",\n",
-      "                        type_ = \"int\")]"
+      "                        type_ = \"int\"),\n",
+      "              Parameter(variable_name = \"one_of_1_3_5\", \n",
+      "                        section = \"dogParams\",\n",
+      "                        name = \"one_of_1_3_5\", \n",
+      "                        type_ = \"int\")   ]"
      ],
      "language": "python",
      "metadata": {},
@@ -612,6 +616,158 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "class Check:\n",
+      "    def __init__(self):\n",
+      "        pass\n",
+      "    \n",
+      "    def get_cpp_code(self):\n",
+      "        return \"\""
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def compare_predicate_Check_generator(compare_op):\n",
+      "    assert compare_op in [\"<\", \"<=\", \">\", \">=\", \"==\"]\n",
+      "    class CompareCheck(Check):\n",
+      "        def __init__(self, parameter, value):\n",
+      "            assert isinstance(parameter, Parameter)\n",
+      "            self.parameter = parameter\n",
+      "            self.value = value\n",
+      "            self.compare_op = compare_op\n",
+      "        def get_cpp_code(self):\n",
+      "            return \"\"\"\n",
+      "    if(!(this->%(variable_name)s %(compare_op)s %(value)s))\n",
+      "        terminate(\"%(variable_name)s should be %(compare_op)s %(value)s.\");\n",
+      "\"\"\" % \\\n",
+      "               {\"variable_name\": self.parameter.variable_name,\n",
+      "                \"compare_op\": compare_op,\n",
+      "                \"value\": self.value}                \n",
+      "            \n",
+      "    CompareCheck.__doc__ = \"\"\"Check class for \"%(compare_op)s\".\"\"\" % {\"compare_op\": compare_op}\n",
+      "    return CompareCheck\n",
+      "        "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "CheckGreaterThan = compare_predicate_Check_generator(\">\")\n",
+      "CheckLessThan = compare_predicate_Check_generator(\"<\")\n",
+      "CheckGreaterEqual = compare_predicate_Check_generator(\">=\")\n",
+      "CheckLessEqual = compare_predicate_Check_generator(\"<=\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "class CheckOneOf(Check):\n",
+      "    def __init__(self, parameter, list_):\n",
+      "        assert isinstance(parameter, Parameter)\n",
+      "        assert parameter.type_.type_string in [\"int\"]\n",
+      "        assert type(list_) in [list, set]\n",
+      "        assert all(map(lambda x: type(x) == int, list_))\n",
+      "        \n",
+      "        self.parameter = parameter\n",
+      "        self.list_ = list_\n",
+      "    \n",
+      "    def get_cpp_code(self):\n",
+      "        return \"    if(\" + \\\n",
+      "               \" &&\\n       \".join([\"%(variable_name)s != %(item)d\" % \\\n",
+      "                                   {\"variable_name\": self.parameter.variable_name,\n",
+      "                                    \"item\": item} \n",
+      "                                   for item in self.list_])  + \\\n",
+      "               \"\"\")\n",
+      "            terminate(\"%(variable_name)s is not one of %(list_string)s.\");\n",
+      "\"\"\" % {\"variable_name\": self.parameter.variable_name, \"list_string\": str(self.list_)}"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print CheckOneOf(parameters[2], [1, 3, 5]).get_cpp_code()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "    class CheckGreaterThan(Check):\n",
+      "        def __init__(self, parameter, value):\n",
+      "            assert isinstance(parameter, Parameter)\n",
+      "            self.parameter = parameter\n",
+      "            self.value = value\n",
+      "        def get_cpp_code(self):\n",
+      "            return \"\"\"\n",
+      "        if(!(this->%(variable_name)s > %(value)s))\n",
+      "            terminate(\"%(variable_name)s should be greater than %(value)s.\");\n",
+      "        \"\"\" % \\\n",
+      "        {\"variable_name\": self.parameter.variable_name,\n",
+      "         \"value\": self.value}"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print CheckGreaterThan(parameters[1], 0).get_cpp_code()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print CheckGreaterThan.__doc__"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "checks = [CheckGreaterThan(parameters[1], 0),\n",
+      "          CheckOneOf(parameters[2], [1, 3, 5])]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "class_declaration = \"\"\"\n",
       "class Params{\n",
       "public:\n",
@@ -693,7 +849,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "cpp_init_method_contents = \"\\n\".join([p.get_parsing_code() for p in parameters])"
+      "cpp_init_method_contents = \"\\n\".join([p.get_parsing_code() for p in parameters]) + \\\n",
+      "                           \"\\n\" + \\\n",
+      "                           \"\\n\".join([c.get_cpp_code() for c in checks])"
      ],
      "language": "python",
      "metadata": {},
@@ -822,6 +980,14 @@
       "with open(cpp_filename, 'w') as f:\n",
       "    f.write(cpp_result)"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
